fred.fred is no longer pulled directly into the top level finsets namespace

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -224,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdp = fred.get_raw_data(['GDP'])"
+    "gdp = fred.fred.get_raw_data(['GDP'])"
    ]
   },
   {
@@ -274,8 +274,8 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>GDP</td>\n",
-       "      <td>2023-11-12</td>\n",
-       "      <td>2023-11-12</td>\n",
+       "      <td>2023-11-15</td>\n",
+       "      <td>2023-11-15</td>\n",
        "      <td>Gross Domestic Product</td>\n",
        "      <td>1947-01-01</td>\n",
        "      <td>2023-07-01</td>\n",
@@ -295,7 +295,7 @@
       ],
       "text/plain": [
        "    id realtime_start realtime_end                   title observation_start  \\\n",
-       "0  GDP     2023-11-12   2023-11-12  Gross Domestic Product        1947-01-01   \n",
+       "0  GDP     2023-11-15   2023-11-15  Gross Domestic Product        1947-01-01   \n",
        "\n",
        "  observation_end  frequency frequency_short                units units_short  \\\n",
        "0      2023-07-01  Quarterly               Q  Billions of Dollars   Bil. of $   \n",
