converting variables to categorical in process_raw_data

--- a/nbs/01_wrds/02_crspd.ipynb
+++ b/nbs/01_wrds/02_crspd.ipynb
@@ -219,9 +219,9 @@
     "    \n",
     "    return ['permno','permco','date',\n",
     "            'ret', 'retx', 'shrout', 'prc', \n",
-    "            'shrcd', 'exchcd','siccd','ticker','cusip','ncusip',\n",
+    "            'shrcd', 'exchcd',\n",
     "            'cfacpr', 'cfacshr',\n",
-    "            'dlret','dlstcd','dlstdt']            "
+    "            'dlret','dlstcd','dlstdt']  #'siccd','naics','cusip','ncusip'          "
    ]
   },
   {
@@ -233,7 +233,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['permno', 'permco', 'date', 'ret', 'retx', 'shrout', 'prc', 'shrcd', 'exchcd', 'siccd', 'ticker', 'cusip', 'ncusip', 'cfacpr', 'cfacshr', 'dlret', 'dlstcd', 'dlstdt']\n"
+      "['permno', 'permco', 'date', 'ret', 'retx', 'shrout', 'prc', 'shrcd', 'exchcd', 'cfacpr', 'cfacshr', 'dlret', 'dlstcd', 'dlstdt']\n"
      ]
     }
    ],
@@ -283,7 +283,7 @@
     {
      "data": {
       "text/plain": [
-       "'b.siccd,c.dlret,a.ret'"
+       "'c.dlret,a.ret,b.siccd'"
       ]
      },
      "execution_count": null,
@@ -328,8 +328,9 @@
     "        vars: List[str]=None, # If None, downloads `default_raw_vars`; use '*' to get all available variables\n",
     "        required_vars = ['permno','date'], # Variables that are always downloaded, regardless `vars` argument\n",
     "        nrows: int=None,  #Number of rows to download. If None, full dataset will be downloaded             \n",
-    "        start_date: str=None,          # Start date in MM/DD/YYYY format\n",
+    "        start_date: str=\"01/01/1950\",  # Start date in MM/DD/YYYY format\n",
     "        end_date: str=None,            # End date in MM/DD/YYYY format  \n",
+    "        shrcd_exchcd_filters: bool=True, # If true, keep only observations with shrcd in [10,11] and exchcd in [1,2,3]\n",
     ") -> pd.DataFrame:\n",
     "    \"Downloads `vars` from `start_date` to `end_date` from WRDS {LIBRARY}.{TABLE}, {LIBRARY}.{NAMES_TABLE} and {LIBRARY}.{DELIST_TABLE}.\" \n",
     "\n",
@@ -343,8 +344,9 @@
     "                            ON a.permno=c.permno AND date_trunc('month', a.date) = date_trunc('month', c.dlstdt)\n",
     "                            \"\"\"\n",
     "    sql_string += \"WHERE 1=1 \"\n",
-    "    if start_date is not None: sql_string += r\" AND date >= %(start_date)s\"\n",
-    "    if end_date is not None: sql_string += r\" AND date <= %(end_date)s\"\n",
+    "    if shrcd_exchcd_filters: sql_string += \"AND shrcd IN (10,11) AND exchcd IN (1,2,3) \"\n",
+    "    if start_date is not None: sql_string += r\"AND date >= %(start_date)s \"\n",
+    "    if end_date is not None: sql_string += r\"AND date <= %(end_date)s \"\n",
     "    if nrows is not None: sql_string += r\" LIMIT %(nrows)s\"\n",
     "\n",
     "    df = wrds_api.download(sql_string,\n",
@@ -416,14 +418,14 @@
        "      <td>2.75</td>\n",
        "      <td>-2.5625</td>\n",
        "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
@@ -436,11 +438,11 @@
        "      cusip   permno  permco   issuno  hexcd  hsiccd        date  bidlo  \\\n",
        "0  68391610  10000.0  7952.0  10396.0    3.0  3990.0  1986-01-07  2.375   \n",
        "\n",
-       "   askhi     prc  ...  nwperm nwcomp nextdt dlamt  dlretx  dlprc  dlpdt dlret  \\\n",
-       "0   2.75 -2.5625  ...    None   None   None  None    None   None   None  None   \n",
+       "   askhi     prc  ...  nwperm  nwcomp  nextdt  dlamt  dlretx  dlprc  dlpdt  \\\n",
+       "0   2.75 -2.5625  ...     NaN     NaN    None    NaN     NaN    NaN   None   \n",
        "\n",
-       "  acperm accomp  \n",
-       "0   None   None  \n",
+       "  dlret  acperm  accomp  \n",
+       "0   NaN    None    None  \n",
        "\n",
        "[1 rows x 47 columns]"
       ]
@@ -452,61 +454,8 @@
    ],
    "source": [
     "#| eval: false\n",
-    "r = get_raw_data(vars = '*', nrows=1)\n",
-    "r"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>permno</th>\n",
-       "      <th>date</th>\n",
-       "      <th>shrout</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [permno, date, shrout]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#| eval: false\n",
-    "r = get_raw_data(vars=['shrout'], nrows=100)\n",
-    "r.head(0)"
+    "r = get_raw_data(vars = '*', nrows=1000)\n",
+    "r.head(1)"
    ]
   },
   {
@@ -522,7 +471,20 @@
     ") -> pd.DataFrame:\n",
     "    \"\"\"Applies `pandasmore.setup_panel` to `df`\"\"\"\n",
     "\n",
-    "    df = pdm.setup_panel(df, panel_ids=ENTITY_ID_IN_RAW_DSET, time_var=TIME_VAR_IN_RAW_DSET, freq=FREQ, **clean_kwargs)\n",
+    "    # Change some variables to categorical\n",
+    "    for col in ['permno','permco','shrcd','exchcd']:\n",
+    "        if col in df.columns:\n",
+    "            df[col] = df[col].astype('Int64').astype('category')\n",
+    "\n",
+    "    for col in ['naics','cusip','ncusip']:\n",
+    "        if col in df.columns:\n",
+    "            df[col] = df[col].astype('string').astype('category')\n",
+    "\n",
+    "    if 'siccd' in df.columns:\n",
+    "        df['siccd'] = df['siccd'].astype('Int64').astype('string').str.zfill(4).astype('category')\n",
+    "\n",
+    "    # Set up panel structure\n",
+    "    df = pdm.setup_panel(df, panel_ids=ENTITY_ID_IN_RAW_DSET, time_var=TIME_VAR_IN_RAW_DSET, freq=FREQ, panel_ids_toint=False, **clean_kwargs)\n",
     "    return df "
    ]
   },
@@ -565,11 +527,47 @@
        "      <th></th>\n",
        "      <th>date</th>\n",
        "      <th>dtdate</th>\n",
-       "      <th>shrout</th>\n",
+       "      <th>cusip</th>\n",
+       "      <th>permco</th>\n",
+       "      <th>issuno</th>\n",
+       "      <th>hexcd</th>\n",
+       "      <th>hsiccd</th>\n",
+       "      <th>bidlo</th>\n",
+       "      <th>askhi</th>\n",
+       "      <th>prc</th>\n",
+       "      <th>...</th>\n",
+       "      <th>nwperm</th>\n",
+       "      <th>nwcomp</th>\n",
+       "      <th>nextdt</th>\n",
+       "      <th>dlamt</th>\n",
+       "      <th>dlretx</th>\n",
+       "      <th>dlprc</th>\n",
+       "      <th>dlpdt</th>\n",
+       "      <th>dlret</th>\n",
+       "      <th>acperm</th>\n",
+       "      <th>accomp</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>permno</th>\n",
        "      <th>Ddate</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -578,12 +576,15 @@
        "  <tbody>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>0 rows × 47 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [date, dtdate, shrout]\n",
-       "Index: []"
+       "Columns: [date, dtdate, cusip, permco, issuno, hexcd, hsiccd, bidlo, askhi, prc, vol, ret, bid, ask, shrout, cfacpr, cfacshr, openprc, numtrd, retx, namedt, nameendt, shrcd, exchcd, siccd, ncusip, ticker, comnam, shrcls, tsymbol, naics, primexch, trdstat, secstat, compno, dlstdt, dlstcd, nwperm, nwcomp, nextdt, dlamt, dlretx, dlprc, dlpdt, dlret, acperm, accomp]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 47 columns]"
       ]
      },
      "execution_count": null,
@@ -650,13 +651,13 @@
        "      <th></th>\n",
        "      <th>date</th>\n",
        "      <th>dtdate</th>\n",
-       "      <th>siccd</th>\n",
-       "      <th>dlstcd</th>\n",
-       "      <th>ret</th>\n",
-       "      <th>naics</th>\n",
-       "      <th>dlstdt</th>\n",
        "      <th>exchcd</th>\n",
+       "      <th>dlstcd</th>\n",
+       "      <th>naics</th>\n",
        "      <th>dlret</th>\n",
+       "      <th>siccd</th>\n",
+       "      <th>dlstdt</th>\n",
+       "      <th>ret</th>\n",
        "      <th>ret_adj</th>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -681,7 +682,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [date, dtdate, siccd, dlstcd, ret, naics, dlstdt, exchcd, dlret, ret_adj]\n",
+       "Columns: [date, dtdate, exchcd, dlstcd, naics, dlret, siccd, dlstdt, ret, ret_adj]\n",
        "Index: []"
       ]
      },
@@ -710,10 +711,7 @@
     "    out = pd.DataFrame(index=df.index)\n",
     "\n",
     "    out['ret_adj'] = delist_adj_ret(df, adj_ret_var='ret_adj')[['ret_adj']].copy()\n",
-    "\n",
-    "    out['siccd_str'] = df['siccd'].astype('Int64').astype('string').str.zfill(4)\n",
-    "    out['naics_str'] = df['naics'].astype('string')\n",
-    "\n",
+    "    \n",
     "    # Note that we are not using trading days below, but calendar days\n",
     "    out['lbhret12'] = pdm.rrolling(1+df['ret'], window=30, func='prod', skipna=True) - 1\n",
     "    out['retvol12'] = pdm.rrolling(df['ret'], window=30, func='std', skipna=True) \n",
@@ -728,7 +726,7 @@
    "outputs": [],
    "source": [
     "#| eval: false\n",
-    "ftr = features(dl)"
+    "ftr = features(df)"
    ]
   },
   {
@@ -759,16 +757,12 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th>ret_adj</th>\n",
-       "      <th>siccd_str</th>\n",
-       "      <th>naics_str</th>\n",
        "      <th>lbhret12</th>\n",
        "      <th>retvol12</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>permno</th>\n",
        "      <th>Ddate</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -781,7 +775,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [ret_adj, siccd_str, naics_str, lbhret12, retvol12]\n",
+       "Columns: [ret_adj, lbhret12, retvol12]\n",
        "Index: []"
       ]
      },
