--- a/nbs/01_wrds/04_compq_ccm.ipynb
+++ b/nbs/01_wrds/04_compq_ccm.ipynb
@@ -322,9 +322,9 @@
        "      <th>fyearq</th>\n",
        "      <th>fqtr</th>\n",
        "      <th>rdq</th>\n",
-       "      <th>sic</th>\n",
        "      <th>indfmt</th>\n",
        "      <th>atq</th>\n",
+       "      <th>sic</th>\n",
        "      <th>sich</th>\n",
        "      <th>naicsh</th>\n",
        "      <th>permno</th>\n",
@@ -341,9 +341,9 @@
        "      <td>1970.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>None</td>\n",
-       "      <td>3089</td>\n",
        "      <td>INDL</td>\n",
        "      <td>None</td>\n",
+       "      <td>3089</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>25881.0</td>\n",
@@ -356,8 +356,8 @@
        "</div>"
       ],
       "text/plain": [
-       "    gvkey    datadate  fyearq  fqtr   rdq   sic indfmt   atq  sich naicsh  \\\n",
-       "0  001000  1970-12-31  1970.0   4.0  None  3089   INDL  None  None   None   \n",
+       "    gvkey    datadate  fyearq  fqtr   rdq indfmt   atq   sic  sich naicsh  \\\n",
+       "0  001000  1970-12-31  1970.0   4.0  None   INDL  None  3089  None   None   \n",
        "\n",
        "    permno   permco liid linkprim  \n",
        "0  25881.0  23369.0   01        P  "
@@ -518,16 +518,16 @@
        "      <th>fyearq</th>\n",
        "      <th>fqtr</th>\n",
        "      <th>rdq</th>\n",
-       "      <th>epspxq</th>\n",
-       "      <th>sic</th>\n",
-       "      <th>ltq</th>\n",
-       "      <th>niq</th>\n",
-       "      <th>cshprq</th>\n",
+       "      <th>exchg</th>\n",
+       "      <th>intanq</th>\n",
+       "      <th>txditcq</th>\n",
+       "      <th>oibdpq</th>\n",
+       "      <th>apdedateq</th>\n",
        "      <th>...</th>\n",
-       "      <th>fyr</th>\n",
-       "      <th>pstkrq</th>\n",
-       "      <th>ppegtq</th>\n",
-       "      <th>oancfy</th>\n",
+       "      <th>cik</th>\n",
+       "      <th>wcapq</th>\n",
+       "      <th>txtq</th>\n",
+       "      <th>cheq</th>\n",
        "      <th>sich</th>\n",
        "      <th>naicsh</th>\n",
        "      <th>permno</th>\n",
@@ -544,13 +544,13 @@
        "      <td>2022.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>None</td>\n",
+       "      <td>14.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2836</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>18.217</td>\n",
+       "      <td>None</td>\n",
        "      <td>...</td>\n",
-       "      <td>12.0</td>\n",
+       "      <td>0001838716</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -567,14 +567,14 @@
        "</div>"
       ],
       "text/plain": [
-       "    gvkey    datadate  fyearq  fqtr   rdq  epspxq   sic  ltq  niq  cshprq  \\\n",
-       "0  040237  2022-03-31  2022.0   1.0  None     NaN  2836  NaN  NaN  18.217   \n",
+       "    gvkey    datadate  fyearq  fqtr   rdq  exchg  intanq  txditcq  oibdpq  \\\n",
+       "0  040237  2022-03-31  2022.0   1.0  None   14.0     NaN      NaN     NaN   \n",
        "\n",
-       "   ...   fyr  pstkrq  ppegtq  oancfy    sich    naicsh   permno   permco  \\\n",
-       "0  ...  12.0     NaN     NaN     NaN  2836.0  325414.0  22557.0  59079.0   \n",
+       "  apdedateq  ...         cik  wcapq  txtq  cheq    sich    naicsh   permno  \\\n",
+       "0      None  ...  0001838716    NaN   NaN   NaN  2836.0  325414.0  22557.0   \n",
        "\n",
-       "   liid  linkprim  \n",
-       "0    90         P  \n",
+       "    permco  liid  linkprim  \n",
+       "0  59079.0    90         P  \n",
        "\n",
        "[1 rows x 81 columns]"
       ]
@@ -600,12 +600,13 @@
     "        df: pd.DataFrame=None,  # Must contain `permno` and `datadate` columns   \n",
     "        clean_kwargs: dict={},  # Params to pass to `pdm.setup_panel` other than `panel_ids`, `time_var`, and `freq`\n",
     ") -> pd.DataFrame:\n",
-    "    \"\"\"Drops duplicage, cleans up dates and applies `pandasmore.setup_panel` to `df`\"\"\"\n",
+    "    \"\"\"Drops duplicates, cleans up dates and applies `pandasmore.setup_panel` to `df`\"\"\"\n",
     "\n",
     "    # Drop permno-datadate duplicates by retaining the latest fyearq-fqtr combination\n",
     "    df = df.sort_values(['permno','datadate','fyearq','fqtr']).drop_duplicates(subset=['permno','datadate'], keep='last').copy()\n",
     "\n",
     "    # Clean up some useful dates (convert rdq to datetime, and extract the fiscal year end date)\n",
+    "    df = df.dropna(subset=['fyearq','fqtr']).copy()\n",
     "    df['rdq'] = pd.to_datetime(df['rdq'])\n",
     "    df['dtdate_fiscal'] = pd.to_datetime((df['fyearq'].astype(int).astype(str) + '-' \n",
     "                                          + (df['fqtr'].astype(int)*3).astype(str) \n",
@@ -613,9 +614,24 @@
     "                                          ) + pd.offsets.MonthEnd(1)\n",
     "    df['Qdate_fiscal'] = df['dtdate_fiscal'].dt.to_period('Q')\n",
     "\n",
+    "    # Change some variables to categorical\n",
+    "    for col in ['permno','permco']:\n",
+    "        if col in df.columns:\n",
+    "            df[col] = df[col].astype('Int64').astype('category')\n",
+    "\n",
+    "    for col in ['gvkey','naics','sic','fic','cik','tic','cusip']:\n",
+    "        if col in df.columns:\n",
+    "            df[col] = df[col].astype('string').astype('category')\n",
+    "\n",
+    "    if 'sich' in df.columns:\n",
+    "        df['sich'] = df['sich'].astype('Int64').astype('string').str.zfill(4).astype('category')\n",
+    "\n",
+    "    if 'naicsh' in df.columns:\n",
+    "        df['naicsh'] = df['naicsh'].astype('Int64').astype('string').astype('category')\n",
+    "\n",
+    "    # Set up panel structure     \n",
     "    df = pdm.setup_panel(df, panel_ids=ENTITY_ID_IN_RAW_DSET, time_var=TIME_VAR_IN_RAW_DSET, freq=FREQ, \n",
-    "                         panel_ids_toint=False,\n",
-    "                         **clean_kwargs)\n",
+    "                         panel_ids_toint=False, **clean_kwargs)\n",
     "    return pdm.order_columns(df,['datadate','dtdate','dtdate_fiscal','Qdate_fiscal','fyearq','fqtr','rdq']) "
    ]
   },
@@ -671,14 +687,14 @@
        "      <th>fqtr</th>\n",
        "      <th>rdq</th>\n",
        "      <th>gvkey</th>\n",
-       "      <th>epspxq</th>\n",
-       "      <th>sic</th>\n",
+       "      <th>exchg</th>\n",
+       "      <th>intanq</th>\n",
        "      <th>...</th>\n",
-       "      <th>ibq</th>\n",
-       "      <th>fyr</th>\n",
-       "      <th>pstkrq</th>\n",
-       "      <th>ppegtq</th>\n",
-       "      <th>oancfy</th>\n",
+       "      <th>sppey</th>\n",
+       "      <th>cik</th>\n",
+       "      <th>wcapq</th>\n",
+       "      <th>txtq</th>\n",
+       "      <th>cheq</th>\n",
        "      <th>sich</th>\n",
        "      <th>naicsh</th>\n",
        "      <th>permco</th>\n",
@@ -713,7 +729,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>10026.0</th>\n",
+       "      <th>10026</th>\n",
        "      <th>2021Q1</th>\n",
        "      <td>2021-03-31</td>\n",
        "      <td>2021-03-31</td>\n",
@@ -723,17 +739,17 @@
        "      <td>2.0</td>\n",
        "      <td>2021-04-26</td>\n",
        "      <td>012825</td>\n",
-       "      <td>0.32</td>\n",
-       "      <td>2050</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>202.138</td>\n",
        "      <td>...</td>\n",
-       "      <td>6.061</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>781.703</td>\n",
-       "      <td>26.781</td>\n",
-       "      <td>2050.0</td>\n",
-       "      <td>311812.0</td>\n",
-       "      <td>7976.0</td>\n",
+       "      <td>1.262</td>\n",
+       "      <td>0000785956</td>\n",
+       "      <td>387.072</td>\n",
+       "      <td>1.752</td>\n",
+       "      <td>259.765</td>\n",
+       "      <td>2050</td>\n",
+       "      <td>311812</td>\n",
+       "      <td>7976</td>\n",
        "      <td>01</td>\n",
        "      <td>P</td>\n",
        "    </tr>\n",
@@ -743,21 +759,17 @@
        "</div>"
       ],
       "text/plain": [
-       "                  datadate     dtdate dtdate_fiscal Qdate_fiscal  fyearq  \\\n",
-       "permno  Qdate                                                              \n",
-       "10026.0 2021Q1  2021-03-31 2021-03-31    2021-06-30       2021Q2  2021.0   \n",
+       "                 datadate     dtdate dtdate_fiscal Qdate_fiscal  fyearq  fqtr  \\\n",
+       "permno Qdate                                                                    \n",
+       "10026  2021Q1  2021-03-31 2021-03-31    2021-06-30       2021Q2  2021.0   2.0   \n",
        "\n",
-       "                fqtr        rdq   gvkey  epspxq   sic  ...    ibq  fyr  \\\n",
-       "permno  Qdate                                          ...               \n",
-       "10026.0 2021Q1   2.0 2021-04-26  012825    0.32  2050  ...  6.061  9.0   \n",
+       "                     rdq   gvkey  exchg   intanq  ...  sppey         cik  \\\n",
+       "permno Qdate                                      ...                      \n",
+       "10026  2021Q1 2021-04-26  012825   14.0  202.138  ...  1.262  0000785956   \n",
        "\n",
-       "                pstkrq   ppegtq  oancfy    sich    naicsh  permco  liid  \\\n",
-       "permno  Qdate                                                             \n",
-       "10026.0 2021Q1     0.0  781.703  26.781  2050.0  311812.0  7976.0    01   \n",
-       "\n",
-       "                linkprim  \n",
-       "permno  Qdate             \n",
-       "10026.0 2021Q1         P  \n",
+       "                 wcapq   txtq     cheq  sich  naicsh  permco  liid linkprim  \n",
+       "permno Qdate                                                                 \n",
+       "10026  2021Q1  387.072  1.752  259.765  2050  311812    7976    01        P  \n",
        "\n",
        "[1 rows x 83 columns]"
       ]
@@ -891,13 +903,8 @@
     "    out = ytd_to_quarterly(df, suffix='_q')\n",
     "\n",
     "    # industry \n",
-    "    out['sich_str'] = df['sich'].astype('Int64').astype('string').str.zfill(4)\n",
-    "    out['naicsh_str'] = df['naicsh'].astype('Int64').astype('string')\n",
-    "    out['sic_str'] = df['sic'].astype('string')\n",
-    "    out['naics_str'] = df['naics'].astype('string')\n",
-    "\n",
-    "    out['sic_full'] = out['sich_str'].fillna(out['sic_str'])\n",
-    "    out['naics_full'] = out['naicsh_str'].fillna(out['naics_str'])\n",
+    "    out['sic_full'] = df['sich'].astype('object').fillna(df['sic'].astype('object')).astype('category')\n",
+    "    out['naics_full'] = df['naicsh'].astype('object').fillna(df['naics'].astype('object')).astype('category')\n",
     "\n",
     "    # size\n",
     "    out['stock_price'] = np.abs(df['prccq'])\n",
@@ -1038,7 +1045,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>10026.0</th>\n",
+       "      <th>10026</th>\n",
        "      <th>2021Q1</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1064,27 +1071,27 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 48 columns</p>\n",
+       "<p>1 rows × 44 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                capxy_q  oancfy_q  sstky_q  prstkcy_q  dltisy_q  dltry_q  \\\n",
-       "permno  Qdate                                                              \n",
-       "10026.0 2021Q1      NaN       NaN      NaN        NaN       NaN      NaN   \n",
+       "               capxy_q  oancfy_q  sstky_q  prstkcy_q  dltisy_q  dltry_q  \\\n",
+       "permno Qdate                                                              \n",
+       "10026  2021Q1      NaN       NaN      NaN        NaN       NaN      NaN   \n",
        "\n",
-       "                dvy_q  sppey_q  aqcy_q  fopty_q  ...  cflow_is cflow_cfs  \\\n",
-       "permno  Qdate                                    ...                       \n",
-       "10026.0 2021Q1    NaN      NaN     NaN      NaN  ...    18.823       NaN   \n",
+       "               dvy_q  sppey_q  aqcy_q  fopty_q  ...  cflow_is cflow_cfs  \\\n",
+       "permno Qdate                                    ...                       \n",
+       "10026  2021Q1    NaN      NaN     NaN      NaN  ...    18.823       NaN   \n",
        "\n",
-       "               cflow_full cflow_is_2la cflow_cfs_2la cflow_full_2la  cash_2a  \\\n",
-       "permno  Qdate                                                                  \n",
-       "10026.0 2021Q1        NaN          NaN           NaN            NaN  0.24393   \n",
+       "              cflow_full  cflow_is_2la  cflow_cfs_2la  cflow_full_2la  \\\n",
+       "permno Qdate                                                            \n",
+       "10026  2021Q1        NaN           NaN            NaN             NaN   \n",
        "\n",
-       "                 booklev  dividends_2la  repurchases_2la  \n",
-       "permno  Qdate                                             \n",
-       "10026.0 2021Q1  0.053648            NaN              NaN  \n",
+       "               cash_2a   booklev  dividends_2la  repurchases_2la  \n",
+       "permno Qdate                                                      \n",
+       "10026  2021Q1  0.24393  0.053648            NaN              NaN  \n",
        "\n",
-       "[1 rows x 48 columns]"
+       "[1 rows x 44 columns]"
       ]
      },
      "execution_count": null,
