--- a/nbs/01_wrds/05_ratios.ipynb
+++ b/nbs/01_wrds/05_ratios.ipynb
@@ -194,7 +194,7 @@
    "outputs": [],
    "source": [
     "#| eval: false\n",
-    "raw = get_raw_data(start_date='01/01/2021', nrows=1)"
+    "raw = get_raw_data(start_date='01/01/2021', nrows=1000)"
    ]
   },
   {
@@ -274,66 +274,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>public_date</th>\n",
-       "      <th>permno</th>\n",
-       "      <th>be</th>\n",
-       "      <th>bm</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1971-01-31</td>\n",
-       "      <td>25881.0</td>\n",
-       "      <td>10.211</td>\n",
-       "      <td>0.427328</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  public_date   permno      be        bm\n",
-       "0  1971-01-31  25881.0  10.211  0.427328"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#| eval: false\n",
-    "r = get_raw_data(vars = ['be', 'bm'], nrows=10)\n",
-    "r.head(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "#| export\n",
@@ -341,9 +281,21 @@
     "        df: pd.DataFrame=None,  # Must contain `permno` and `datadate` columns         \n",
     "        clean_kwargs: dict={},  # Params to pass to `pdm.setup_panel` other than `panel_ids`, `time_var`, and `freq`\n",
     ") -> pd.DataFrame:\n",
-    "    \"\"\"Applies `pandasmore.setup_panel` to `df`\"\"\"\n",
+    "    \"\"\"Converts some variables to categorical and applies `pandasmore.setup_panel` to `df`\"\"\"\n",
     "\n",
-    "    df = pdm.setup_panel(df, panel_ids=ENTITY_ID_IN_RAW_DSET, time_var=TIME_VAR_IN_RAW_DSET, freq=FREQ, **clean_kwargs)\n",
+    "    # Convert some columns to categorical\n",
+    "    if 'permno' in df.columns: df['permno'] = df['permno'].astype('Int64').astype('category')\n",
+    "    \n",
+    "    for col in ['gvkey','ticker','cusip','gsector','gicdesc']:\n",
+    "        if col in df.columns: df[col] = df[col].astype('category')\n",
+    "\n",
+    "    for col in df.columns:\n",
+    "        if col.startswith('ffi'):\n",
+    "            if col.endswith('desc'): df[col] = df[col].astype('category')\n",
+    "            else: df[col] = df[col].astype('Int64').astype('category')\n",
+    "\n",
+    "    # Set panel structure     \n",
+    "    df = pdm.setup_panel(df, panel_ids=ENTITY_ID_IN_RAW_DSET, time_var=TIME_VAR_IN_RAW_DSET, freq=FREQ, panel_ids_toint=False, **clean_kwargs)\n",
     "    return df "
    ]
   },
@@ -433,17 +385,54 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10145</th>\n",
+       "      <th>2021-01</th>\n",
+       "      <td>2021-01-31</td>\n",
+       "      <td>2021-01-31</td>\n",
+       "      <td>001300</td>\n",
+       "      <td>2019-12-31</td>\n",
+       "      <td>2020-09-30</td>\n",
+       "      <td>28.329023</td>\n",
+       "      <td>19548.0</td>\n",
+       "      <td>0.16924</td>\n",
+       "      <td>17.302839</td>\n",
+       "      <td>24.574843</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>GOVT</td>\n",
+       "      <td>37</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>HON</td>\n",
+       "      <td>43851610</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>0 rows × 100 columns</p>\n",
+       "<p>1 rows × 100 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [public_date, dtdate, gvkey, adate, qdate, capei, be, bm, evm, pe_op_basic, pe_op_dil, pe_exi, pe_inc, ps, pcf, dpr, npm, opmbd, opmad, gpm, ptpm, cfm, roa, roe, roce, efftax, aftret_eq, aftret_invcapx, aftret_equity, pretret_noa, pretret_earnat, gprof, equity_invcap, debt_invcap, totdebt_invcap, capital_ratio, int_debt, int_totdebt, cash_lt, invt_act, rect_act, debt_at, debt_ebitda, short_debt, curr_debt, lt_debt, profit_lct, ocf_lct, cash_debt, fcf_ocf, lt_ppent, dltt_be, debt_assets, debt_capital, de_ratio, intcov, intcov_ratio, cash_ratio, quick_ratio, curr_ratio, cash_conversion, inv_turn, at_turn, rect_turn, pay_turn, sale_invcap, sale_equity, sale_nwc, rd_sale, adv_sale, staff_sale, accrual, ret_crsp, gsector, gicdesc, mktcap, price, ptb, peg_trailing, divyield, peg_1yrforward, peg_ltgforward, ffi5_desc, ffi5, ffi10_desc, ffi10, ffi12_desc, ffi12, ffi17_desc, ffi17, ffi30_desc, ffi30, ffi38_desc, ffi38, ffi48_desc, ffi48, ffi49_desc, ffi49, ticker, cusip]\n",
-       "Index: []\n",
+       "               public_date     dtdate   gvkey       adate       qdate  \\\n",
+       "permno Mdate                                                            \n",
+       "10145  2021-01  2021-01-31 2021-01-31  001300  2019-12-31  2020-09-30   \n",
        "\n",
-       "[0 rows x 100 columns]"
+       "                    capei       be       bm        evm  pe_op_basic  ...  \\\n",
+       "permno Mdate                                                         ...   \n",
+       "10145  2021-01  28.329023  19548.0  0.16924  17.302839    24.574843  ...   \n",
+       "\n",
+       "                ffi30_desc  ffi30  ffi38_desc  ffi38  ffi48_desc  ffi48  \\\n",
+       "permno Mdate                                                              \n",
+       "10145  2021-01         NaN    NaN        GOVT     37         NaN    NaN   \n",
+       "\n",
+       "                ffi49_desc  ffi49  ticker     cusip  \n",
+       "permno Mdate                                         \n",
+       "10145  2021-01         NaN    NaN     HON  43851610  \n",
+       "\n",
+       "[1 rows x 100 columns]"
       ]
      },
      "execution_count": null,
@@ -453,7 +442,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "df_clean.head(0)"
+    "df_clean.head(1)"
    ]
   },
   {
@@ -557,29 +546,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>54594</th>\n",
+       "      <th>10145</th>\n",
        "      <th>2021-01</th>\n",
-       "      <td>23.990408</td>\n",
-       "      <td>0.89959</td>\n",
-       "      <td>11.385353</td>\n",
-       "      <td>33.55</td>\n",
-       "      <td>34.234694</td>\n",
-       "      <td>-95.857143</td>\n",
-       "      <td>-56.864407</td>\n",
-       "      <td>0.660998</td>\n",
-       "      <td>25.032697</td>\n",
-       "      <td>0.433198</td>\n",
+       "      <td>28.329023</td>\n",
+       "      <td>0.16924</td>\n",
+       "      <td>17.302839</td>\n",
+       "      <td>24.574843</td>\n",
+       "      <td>24.856234</td>\n",
+       "      <td>28.030129</td>\n",
+       "      <td>28.030129</td>\n",
+       "      <td>4.125068</td>\n",
+       "      <td>22.696753</td>\n",
+       "      <td>0.514853</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.046821</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.032722</td>\n",
-       "      <td>-0.073716</td>\n",
-       "      <td>1.314585</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>-2.60877</td>\n",
-       "      <td>-6.703297</td>\n",
+       "      <td>-0.017443</td>\n",
+       "      <td>-0.081476</td>\n",
+       "      <td>7.012911</td>\n",
+       "      <td>0.958785</td>\n",
+       "      <td>0.019041</td>\n",
+       "      <td>-2.024123</td>\n",
+       "      <td>10.657844</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -589,19 +578,19 @@
       "text/plain": [
        "                    capei       bm        evm  pe_op_basic  pe_op_dil  \\\n",
        "permno Mdate                                                            \n",
-       "54594  2021-01  23.990408  0.89959  11.385353        33.55  34.234694   \n",
+       "10145  2021-01  28.329023  0.16924  17.302839    24.574843  24.856234   \n",
        "\n",
        "                   pe_exi     pe_inc        ps        pcf       dpr  ...  \\\n",
        "permno Mdate                                                         ...   \n",
-       "54594  2021-01 -95.857143 -56.864407  0.660998  25.032697  0.433198  ...   \n",
+       "10145  2021-01  28.030129  28.030129  4.125068  22.696753  0.514853  ...   \n",
        "\n",
-       "                rd_sale  adv_sale  staff_sale   accrual  ret_crsp       ptb  \\\n",
-       "permno Mdate                                                                  \n",
-       "54594  2021-01      0.0       0.0         0.0 -0.032722 -0.073716  1.314585   \n",
+       "                 rd_sale  adv_sale  staff_sale   accrual  ret_crsp       ptb  \\\n",
+       "permno Mdate                                                                   \n",
+       "10145  2021-01  0.046821       0.0         0.0 -0.017443 -0.081476  7.012911   \n",
        "\n",
        "                peg_trailing  divyield  peg_1yrforward  peg_ltgforward  \n",
        "permno Mdate                                                            \n",
-       "54594  2021-01          None      None        -2.60877       -6.703297  \n",
+       "10145  2021-01      0.958785  0.019041       -2.024123       10.657844  \n",
        "\n",
        "[1 rows x 72 columns]"
       ]
@@ -613,7 +602,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "keep_only_ratios(df_clean)"
+    "keep_only_ratios(df_clean).head(1)"
    ]
   },
   {
