--- a/nbs/02_papers/hassan_etal_2019.ipynb
+++ b/nbs/02_papers/hassan_etal_2019.ipynb
@@ -362,7 +362,7 @@
     "\n",
     "    df = df.copy()\n",
     "\n",
-    "    df['gvkey'] = df['gvkey'].astype('string').str.zfill(6) #prepend 0's up to len 6\n",
+    "    df['gvkey'] = df['gvkey'].astype('string').str.zfill(6).astype('category') #prepend 0's up to len 6\n",
     "    df['date'] = df['date'].astype('string')\n",
     "\n",
     "    # Format date variable so it can be converted into datetime (as the last day of the quarter)\n",
