--- a/nbs/01_wrds/01_crspm.ipynb
+++ b/nbs/01_wrds/01_crspm.ipynb
@@ -284,7 +284,7 @@
     {
      "data": {
       "text/plain": [
-       "'c.dlret,b.siccd,b.naics,a.ret'"
+       "'c.dlret,b.naics,b.siccd,a.ret'"
       ]
      },
      "execution_count": null,
@@ -413,18 +413,18 @@
        "      <td>3.0</td>\n",
        "      <td>3990.0</td>\n",
        "      <td>1985-12-31</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
@@ -434,14 +434,14 @@
        "</div>"
       ],
       "text/plain": [
-       "      cusip   permno  permco   issuno  hexcd  hsiccd        date bidlo askhi  \\\n",
-       "0  68391610  10000.0  7952.0  10396.0    3.0  3990.0  1985-12-31  None  None   \n",
+       "      cusip   permno  permco   issuno  hexcd  hsiccd        date  bidlo  \\\n",
+       "0  68391610  10000.0  7952.0  10396.0    3.0  3990.0  1985-12-31    NaN   \n",
        "\n",
-       "    prc  ... nwperm nwcomp nextdt dlamt dlretx dlprc dlpdt  dlret acperm  \\\n",
-       "0  None  ...   None   None   None  None   None  None  None   None   None   \n",
+       "   askhi  prc  ...  nwperm  nwcomp  nextdt  dlamt  dlretx  dlprc  dlpdt  \\\n",
+       "0    NaN  NaN  ...     NaN     NaN    None    NaN     NaN    NaN   None   \n",
        "\n",
-       "  accomp  \n",
-       "0   None  \n",
+       "   dlret  acperm accomp  \n",
+       "0    NaN    None   None  \n",
        "\n",
        "[1 rows x 48 columns]"
       ]
@@ -453,63 +453,8 @@
    ],
    "source": [
     "#| eval: false\n",
-    "r = get_raw_data(vars = '*', nrows=1)\n",
-    "r"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>permno</th>\n",
-       "      <th>date</th>\n",
-       "      <th>siccd</th>\n",
-       "      <th>shrout</th>\n",
-       "      <th>naics</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [permno, date, siccd, shrout, naics]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#| eval: false\n",
-    "r = get_raw_data(vars=['shrout','siccd','naics'], nrows=100)\n",
-    "r.head(0)"
+    "r = get_raw_data(vars = '*', nrows=100)\n",
+    "r.head(1)"
    ]
   },
   {
@@ -525,7 +470,20 @@
     ") -> pd.DataFrame:\n",
     "    \"\"\"Applies `pandasmore.setup_panel` to `df`\"\"\"\n",
     "\n",
-    "    df = pdm.setup_panel(df, panel_ids=ENTITY_ID_IN_RAW_DSET, time_var=TIME_VAR_IN_RAW_DSET, freq=FREQ, **clean_kwargs)\n",
+    "    # Change some variables to categorical\n",
+    "    for col in ['permno','permco','shrcd','exchcd']:\n",
+    "        if col in df.columns:\n",
+    "            df[col] = df[col].astype('Int64').astype('category')\n",
+    "\n",
+    "    for col in ['naics','cusip','ncusip']:\n",
+    "        if col in df.columns:\n",
+    "            df[col] = df[col].astype('string').astype('category')\n",
+    "\n",
+    "    if 'siccd' in df.columns:\n",
+    "        df['siccd'] = df['siccd'].astype('Int64').astype('string').str.zfill(4).astype('category')\n",
+    "\n",
+    "    df = pdm.setup_panel(df, panel_ids=ENTITY_ID_IN_RAW_DSET, time_var=TIME_VAR_IN_RAW_DSET, freq=FREQ, \n",
+    "                        panel_ids_toint=False, **clean_kwargs)\n",
     "    return df "
    ]
   },
@@ -568,13 +526,45 @@
        "      <th></th>\n",
        "      <th>date</th>\n",
        "      <th>dtdate</th>\n",
-       "      <th>siccd</th>\n",
-       "      <th>shrout</th>\n",
-       "      <th>naics</th>\n",
+       "      <th>cusip</th>\n",
+       "      <th>permco</th>\n",
+       "      <th>issuno</th>\n",
+       "      <th>hexcd</th>\n",
+       "      <th>hsiccd</th>\n",
+       "      <th>bidlo</th>\n",
+       "      <th>askhi</th>\n",
+       "      <th>prc</th>\n",
+       "      <th>...</th>\n",
+       "      <th>nwperm</th>\n",
+       "      <th>nwcomp</th>\n",
+       "      <th>nextdt</th>\n",
+       "      <th>dlamt</th>\n",
+       "      <th>dlretx</th>\n",
+       "      <th>dlprc</th>\n",
+       "      <th>dlpdt</th>\n",
+       "      <th>dlret</th>\n",
+       "      <th>acperm</th>\n",
+       "      <th>accomp</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>permno</th>\n",
        "      <th>Mdate</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -585,12 +575,15 @@
        "  <tbody>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>0 rows × 48 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [date, dtdate, siccd, shrout, naics]\n",
-       "Index: []"
+       "Columns: [date, dtdate, cusip, permco, issuno, hexcd, hsiccd, bidlo, askhi, prc, vol, ret, bid, ask, shrout, cfacpr, cfacshr, altprc, spread, altprcdt, retx, namedt, nameendt, shrcd, exchcd, siccd, ncusip, ticker, comnam, shrcls, tsymbol, naics, primexch, trdstat, secstat, compno, dlstdt, dlstcd, nwperm, nwcomp, nextdt, dlamt, dlretx, dlprc, dlpdt, dlret, acperm, accomp]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 48 columns]"
       ]
      },
      "execution_count": null,
@@ -657,13 +650,13 @@
        "      <th></th>\n",
        "      <th>date</th>\n",
        "      <th>dtdate</th>\n",
+       "      <th>naics</th>\n",
        "      <th>dlret</th>\n",
        "      <th>dlstdt</th>\n",
-       "      <th>naics</th>\n",
-       "      <th>siccd</th>\n",
-       "      <th>dlstcd</th>\n",
        "      <th>exchcd</th>\n",
+       "      <th>dlstcd</th>\n",
        "      <th>ret</th>\n",
+       "      <th>siccd</th>\n",
        "      <th>ret_adj</th>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -688,7 +681,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [date, dtdate, dlret, dlstdt, naics, siccd, dlstcd, exchcd, ret, ret_adj]\n",
+       "Columns: [date, dtdate, naics, dlret, dlstdt, exchcd, dlstcd, ret, siccd, ret_adj]\n",
        "Index: []"
       ]
      },
@@ -715,10 +708,7 @@
     ") -> pd.DataFrame:\n",
     "    \n",
     "    out = pd.DataFrame(index=df.index)\n",
-    "\n",
-    "    out['siccd_str'] = df['siccd'].astype('Int64').astype('string').str.zfill(4)\n",
-    "    out['naics_str'] = df['naics'].astype('string')\n",
-    "\n",
+    "    \n",
     "    out['ret_adj'] = delist_adj_ret(df, adj_ret_var='ret_adj')[['ret_adj']].copy()\n",
     "\n",
     "    out['lbhret12'] = pdm.rrolling(1+df['ret'], window=12, func='prod') - 1\n",
@@ -734,7 +724,7 @@
    "outputs": [],
    "source": [
     "#| eval: false\n",
-    "ftr = features(dl)"
+    "ftr = features(df)"
    ]
   },
   {
@@ -764,8 +754,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th>siccd_str</th>\n",
-       "      <th>naics_str</th>\n",
        "      <th>ret_adj</th>\n",
        "      <th>lbhret12</th>\n",
        "      <th>retvol12</th>\n",
@@ -776,19 +764,24 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10000</th>\n",
+       "      <th>1985-12</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [siccd_str, naics_str, ret_adj, lbhret12, retvol12]\n",
-       "Index: []"
+       "                ret_adj  lbhret12  retvol12\n",
+       "permno Mdate                               \n",
+       "10000  1985-12      NaN       NaN       NaN"
       ]
      },
      "execution_count": null,
@@ -798,7 +791,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "ftr.head(0)"
+    "ftr.head(1)"
    ]
   },
   {
