--- a/nbs/01_wrds/03_compa.ipynb
+++ b/nbs/01_wrds/03_compa.ipynb
@@ -241,7 +241,7 @@
     {
      "data": {
       "text/plain": [
-       "'a.at,b.sic,a.lt'"
+       "'a.lt,a.at,b.sic'"
       ]
      },
      "execution_count": null,
@@ -321,10 +321,10 @@
        "      <th></th>\n",
        "      <th>gvkey</th>\n",
        "      <th>datadate</th>\n",
+       "      <th>indfmt</th>\n",
+       "      <th>sich</th>\n",
        "      <th>at</th>\n",
        "      <th>sic</th>\n",
-       "      <th>sich</th>\n",
-       "      <th>indfmt</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -332,18 +332,18 @@
        "      <th>0</th>\n",
        "      <td>001000</td>\n",
        "      <td>1961-12-31</td>\n",
+       "      <td>INDL</td>\n",
+       "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>3089</td>\n",
-       "      <td>None</td>\n",
-       "      <td>INDL</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    gvkey    datadate    at   sic  sich indfmt\n",
-       "0  001000  1961-12-31  None  3089  None   INDL"
+       "    gvkey    datadate indfmt  sich    at   sic\n",
+       "0  001000  1961-12-31   INDL  None  None  3089"
       ]
      },
      "execution_count": null,
@@ -498,8 +498,8 @@
        "      <th></th>\n",
        "      <th>gvkey</th>\n",
        "      <th>datadate</th>\n",
-       "      <th>at</th>\n",
        "      <th>lt</th>\n",
+       "      <th>at</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -509,7 +509,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [gvkey, datadate, at, lt]\n",
+       "Columns: [gvkey, datadate, lt, at]\n",
        "Index: []"
       ]
      },
@@ -561,25 +561,25 @@
        "      <th></th>\n",
        "      <th>gvkey</th>\n",
        "      <th>datadate</th>\n",
-       "      <th>ppent</th>\n",
-       "      <th>lt</th>\n",
-       "      <th>sale</th>\n",
-       "      <th>rdip</th>\n",
-       "      <th>dvp</th>\n",
-       "      <th>ivncf</th>\n",
-       "      <th>txditc</th>\n",
+       "      <th>ceq</th>\n",
+       "      <th>dltr</th>\n",
+       "      <th>exchg</th>\n",
+       "      <th>act</th>\n",
        "      <th>prcc_f</th>\n",
+       "      <th>dp</th>\n",
+       "      <th>aqc</th>\n",
+       "      <th>at</th>\n",
        "      <th>...</th>\n",
-       "      <th>seq</th>\n",
-       "      <th>pstkrv</th>\n",
-       "      <th>txt</th>\n",
-       "      <th>pifo</th>\n",
+       "      <th>wcap</th>\n",
+       "      <th>re</th>\n",
+       "      <th>cik</th>\n",
        "      <th>dlc</th>\n",
+       "      <th>pi</th>\n",
+       "      <th>ap</th>\n",
+       "      <th>rdip</th>\n",
        "      <th>xint</th>\n",
-       "      <th>sich</th>\n",
-       "      <th>dpact</th>\n",
-       "      <th>txdb</th>\n",
-       "      <th>naics</th>\n",
+       "      <th>rect</th>\n",
+       "      <th>sppe</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -590,7 +590,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [gvkey, datadate, ppent, lt, sale, rdip, dvp, ivncf, txditc, prcc_f, ap, xrd, ajex, tic, prstkc, ni, oancf, at, pstkl, xad, txp, dltt, rect, xrent, act, fic, drc, revt, naicsh, emp, dv, che, sppe, mib, dvc, txdi, dp, xsga, fyear, ivao, fyr, drlt, oibdp, tstk, cogs, dltis, pi, gdwl, aqc, fincf, ceq, ib, capx, ppegt, dltr, wcap, cusip, xpp, lct, itcb, txfo, exchg, intan, pstk, xacc, csho, sstk, re, ivst, dd1, dvpsx_f, sic, invt, cik, seq, pstkrv, txt, pifo, dlc, xint, sich, dpact, txdb, naics]\n",
+       "Columns: [gvkey, datadate, ceq, dltr, exchg, act, prcc_f, dp, aqc, at, drc, fyear, che, cusip, txdi, xrent, ni, ppent, dvpsx_f, ppegt, pstk, txditc, naics, oancf, sstk, fyr, dltt, sich, xsga, dd1, dpact, oibdp, dltis, invt, fic, pstkl, intan, pifo, drlt, dv, pstkrv, revt, fincf, cogs, ivst, ajex, ib, mib, xpp, xrd, txdb, tstk, lt, tic, sale, prstkc, txfo, ivncf, txt, dvc, itcb, ivao, emp, lct, txp, gdwl, seq, xad, dvp, xacc, naicsh, capx, sic, csho, wcap, re, cik, dlc, pi, ap, rdip, xint, rect, sppe]\n",
        "Index: []\n",
        "\n",
        "[0 rows x 84 columns]"
@@ -619,6 +619,18 @@
     ") -> pd.DataFrame:\n",
     "    \"\"\"Applies `pandasmore.setup_panel` to `df`\"\"\"\n",
     "\n",
+    "    # Change some variables to categorical\n",
+    "    for col in ['gvkey','naics','sic','fic','cik','tic','cusip']:\n",
+    "        if col in df.columns:\n",
+    "            df[col] = df[col].astype('string').astype('category')\n",
+    "\n",
+    "    if 'sich' in df.columns:\n",
+    "        df['sich'] = df['sich'].astype('Int64').astype('string').str.zfill(4).astype('category')\n",
+    "\n",
+    "    if 'naicsh' in df.columns:\n",
+    "        df['naicsh'] = df['naicsh'].astype('Int64').astype('string').astype('category')\n",
+    "\n",
+    "    # Set up panel structure\n",
     "    df = pdm.setup_panel(df, panel_ids=ENTITY_ID_IN_RAW_DSET, time_var=TIME_VAR_IN_RAW_DSET, freq=FREQ, \n",
     "                         panel_ids_toint=False,\n",
     "                         **clean_kwargs)\n",
@@ -664,25 +676,25 @@
        "      <th></th>\n",
        "      <th>datadate</th>\n",
        "      <th>dtdate</th>\n",
-       "      <th>ppent</th>\n",
-       "      <th>lt</th>\n",
-       "      <th>sale</th>\n",
-       "      <th>rdip</th>\n",
-       "      <th>dvp</th>\n",
-       "      <th>ivncf</th>\n",
-       "      <th>txditc</th>\n",
+       "      <th>ceq</th>\n",
+       "      <th>dltr</th>\n",
+       "      <th>exchg</th>\n",
+       "      <th>act</th>\n",
        "      <th>prcc_f</th>\n",
+       "      <th>dp</th>\n",
+       "      <th>aqc</th>\n",
+       "      <th>at</th>\n",
        "      <th>...</th>\n",
-       "      <th>seq</th>\n",
-       "      <th>pstkrv</th>\n",
-       "      <th>txt</th>\n",
-       "      <th>pifo</th>\n",
+       "      <th>wcap</th>\n",
+       "      <th>re</th>\n",
+       "      <th>cik</th>\n",
        "      <th>dlc</th>\n",
+       "      <th>pi</th>\n",
+       "      <th>ap</th>\n",
+       "      <th>rdip</th>\n",
        "      <th>xint</th>\n",
-       "      <th>sich</th>\n",
-       "      <th>dpact</th>\n",
-       "      <th>txdb</th>\n",
-       "      <th>naics</th>\n",
+       "      <th>rect</th>\n",
+       "      <th>sppe</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>gvkey</th>\n",
@@ -718,7 +730,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [datadate, dtdate, ppent, lt, sale, rdip, dvp, ivncf, txditc, prcc_f, ap, xrd, ajex, tic, prstkc, ni, oancf, at, pstkl, xad, txp, dltt, rect, xrent, act, fic, drc, revt, naicsh, emp, dv, che, sppe, mib, dvc, txdi, dp, xsga, fyear, ivao, fyr, drlt, oibdp, tstk, cogs, dltis, pi, gdwl, aqc, fincf, ceq, ib, capx, ppegt, dltr, wcap, cusip, xpp, lct, itcb, txfo, exchg, intan, pstk, xacc, csho, sstk, re, ivst, dd1, dvpsx_f, sic, invt, cik, seq, pstkrv, txt, pifo, dlc, xint, sich, dpact, txdb, naics]\n",
+       "Columns: [datadate, dtdate, ceq, dltr, exchg, act, prcc_f, dp, aqc, at, drc, fyear, che, cusip, txdi, xrent, ni, ppent, dvpsx_f, ppegt, pstk, txditc, naics, oancf, sstk, fyr, dltt, sich, xsga, dd1, dpact, oibdp, dltis, invt, fic, pstkl, intan, pifo, drlt, dv, pstkrv, revt, fincf, cogs, ivst, ajex, ib, mib, xpp, xrd, txdb, tstk, lt, tic, sale, prstkc, txfo, ivncf, txt, dvc, itcb, ivao, emp, lct, txp, gdwl, seq, xad, dvp, xacc, naicsh, capx, sic, csho, wcap, re, cik, dlc, pi, ap, rdip, xint, rect, sppe]\n",
        "Index: []\n",
        "\n",
        "[0 rows x 84 columns]"
@@ -747,13 +759,8 @@
     "    out = pd.DataFrame(index=df.index)\n",
     "\n",
     "    # industry \n",
-    "    out['sich_str'] = df['sich'].astype('Int64').astype('string').str.zfill(4)\n",
-    "    out['naicsh_str'] = df['naicsh'].astype('Int64').astype('string')\n",
-    "    out['sic_str'] = df['sic'].astype('string')\n",
-    "    out['naics_str'] = df['naics'].astype('string')\n",
-    "\n",
-    "    out['sic_full'] = out['sich_str'].fillna(out['sic_str'])\n",
-    "    out['naics_full'] = out['naicsh_str'].fillna(out['naics_str'])\n",
+    "    out['sic_full'] = df['sich'].astype('object').fillna(df['sic'].astype('object')).astype('category')\n",
+    "    out['naics_full'] = df['naicsh'].astype('object').fillna(df['naics'].astype('object')).astype('category')\n",
     "\n",
     "    # size \n",
     "    out['stock_price'] = np.abs(df['prcc_f'])\n",
@@ -847,16 +854,16 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th>sich_str</th>\n",
-       "      <th>naicsh_str</th>\n",
-       "      <th>sic_str</th>\n",
-       "      <th>naics_str</th>\n",
        "      <th>sic_full</th>\n",
        "      <th>naics_full</th>\n",
        "      <th>stock_price</th>\n",
        "      <th>lag_at</th>\n",
        "      <th>mktcap</th>\n",
        "      <th>pstk0</th>\n",
+       "      <th>pref_stock</th>\n",
+       "      <th>shreq</th>\n",
+       "      <th>bookeq</th>\n",
+       "      <th>bookeq_w_itcb</th>\n",
        "      <th>...</th>\n",
        "      <th>cflow_is</th>\n",
        "      <th>cflow_cfs</th>\n",
@@ -898,15 +905,15 @@
        "  <tbody>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>0 rows × 38 columns</p>\n",
+       "<p>0 rows × 34 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [sich_str, naicsh_str, sic_str, naics_str, sic_full, naics_full, stock_price, lag_at, mktcap, pstk0, pref_stock, shreq, bookeq, bookeq_w_itcb, tobinq, equityiss_tot, equityiss_cfs, debtiss_tot, debtiss_cfs, debtiss_bs, equityiss_tot_2la, equityiss_cfs_2la, debtiss_tot_2la, debtiss_cfs_2la, debtiss_bs_2la, ppent_pch, capx_2la, roa, cflow_is, cflow_cfs, cflow_full, cflow_is_2la, cflow_cfs_2la, cflow_full_2la, cash_2a, booklev, dividends_2la, repurchases_2la]\n",
+       "Columns: [sic_full, naics_full, stock_price, lag_at, mktcap, pstk0, pref_stock, shreq, bookeq, bookeq_w_itcb, tobinq, equityiss_tot, equityiss_cfs, debtiss_tot, debtiss_cfs, debtiss_bs, equityiss_tot_2la, equityiss_cfs_2la, debtiss_tot_2la, debtiss_cfs_2la, debtiss_bs_2la, ppent_pch, capx_2la, roa, cflow_is, cflow_cfs, cflow_full, cflow_is_2la, cflow_cfs_2la, cflow_full_2la, cash_2a, booklev, dividends_2la, repurchases_2la]\n",
        "Index: []\n",
        "\n",
-       "[0 rows x 38 columns]"
+       "[0 rows x 34 columns]"
       ]
      },
      "execution_count": null,
