--- a/nbs/01_wrds/03_compa_ccm.ipynb
+++ b/nbs/01_wrds/03_compa_ccm.ipynb
@@ -461,21 +461,21 @@
        "      <th>linkprim</th>\n",
        "      <th>gvkey</th>\n",
        "      <th>datadate</th>\n",
-       "      <th>pstk</th>\n",
-       "      <th>ni</th>\n",
-       "      <th>dltis</th>\n",
-       "      <th>xpp</th>\n",
+       "      <th>rect</th>\n",
+       "      <th>sich</th>\n",
+       "      <th>cik</th>\n",
+       "      <th>fyr</th>\n",
        "      <th>...</th>\n",
-       "      <th>gdwl</th>\n",
-       "      <th>lt</th>\n",
-       "      <th>xrd</th>\n",
-       "      <th>tstk</th>\n",
-       "      <th>fic</th>\n",
-       "      <th>lct</th>\n",
-       "      <th>che</th>\n",
-       "      <th>dpact</th>\n",
-       "      <th>seq</th>\n",
-       "      <th>xsga</th>\n",
+       "      <th>ceq</th>\n",
+       "      <th>dltt</th>\n",
+       "      <th>ppegt</th>\n",
+       "      <th>txdi</th>\n",
+       "      <th>dltis</th>\n",
+       "      <th>sstk</th>\n",
+       "      <th>drc</th>\n",
+       "      <th>rdip</th>\n",
+       "      <th>cusip</th>\n",
+       "      <th>txfo</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -486,7 +486,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [permno, permco, liid, linkprim, gvkey, datadate, pstk, ni, dltis, xpp, dv, prcc_f, fyr, txditc, ap, sic, csho, rdip, drc, dvp, capx, wcap, xacc, pstkrv, dlc, oibdp, rect, dltr, txdi, re, pifo, ivao, ppegt, xrent, ib, oancf, fincf, drlt, act, ivst, cogs, naics, pstkl, tic, txp, emp, dd1, ajex, prstkc, dvc, itcb, mib, invt, sstk, cik, xad, dp, ivncf, sich, ppent, intan, txt, naicsh, xint, pi, cusip, fyear, aqc, exchg, at, ceq, sale, txdb, revt, dvpsx_f, txfo, dltt, sppe, gdwl, lt, xrd, tstk, fic, lct, che, dpact, seq, xsga]\n",
+       "Columns: [permno, permco, liid, linkprim, gvkey, datadate, rect, sich, cik, fyr, ajex, pifo, ivao, exchg, fyear, sppe, itcb, dvc, drlt, capx, xpp, tstk, ivst, xacc, gdwl, emp, dlc, oancf, txp, dd1, oibdp, ivncf, prcc_f, xrd, dvpsx_f, re, aqc, txditc, seq, ppent, xint, ib, mib, dpact, intan, fincf, dv, csho, che, dltr, ni, invt, tic, pi, act, lt, lct, xsga, revt, xrent, pstkrv, sale, txt, prstkc, dvp, at, txdb, sic, naicsh, fic, naics, pstk, wcap, cogs, pstkl, xad, ap, dp, ceq, dltt, ppegt, txdi, dltis, sstk, drc, rdip, cusip, txfo]\n",
        "Index: []\n",
        "\n",
        "[0 rows x 88 columns]"
@@ -518,7 +518,23 @@
     "\n",
     "    if linkprim_filter: df = df.loc[df['linkprim'].isin(linkprim_filter)].copy()\n",
     "\n",
-    "    df = pdm.setup_panel(df, panel_ids=ENTITY_ID_IN_RAW_DSET, time_var=TIME_VAR_IN_RAW_DSET, freq=FREQ, **clean_kwargs)\n",
+    "    # Change some variables to categorical\n",
+    "    for col in ['permno','permco']:\n",
+    "        if col in df.columns:\n",
+    "            df[col] = df[col].astype('Int64').astype('category')\n",
+    "\n",
+    "    for col in ['gvkey','naics','sic','fic','cik','tic','cusip']:\n",
+    "        if col in df.columns:\n",
+    "            df[col] = df[col].astype('string').astype('category')\n",
+    "\n",
+    "    if 'sich' in df.columns:\n",
+    "        df['sich'] = df['sich'].astype('Int64').astype('string').str.zfill(4).astype('category')\n",
+    "\n",
+    "    if 'naicsh' in df.columns:\n",
+    "        df['naicsh'] = df['naicsh'].astype('Int64').astype('string').astype('category')\n",
+    "\n",
+    "    # Set up panel structure\n",
+    "    df = pdm.setup_panel(df, panel_ids=ENTITY_ID_IN_RAW_DSET, time_var=TIME_VAR_IN_RAW_DSET, freq=FREQ, panel_ids_toint=False, **clean_kwargs)\n",
     "    return df "
    ]
   },
@@ -565,21 +581,21 @@
        "      <th>liid</th>\n",
        "      <th>linkprim</th>\n",
        "      <th>gvkey</th>\n",
-       "      <th>pstk</th>\n",
-       "      <th>ni</th>\n",
-       "      <th>dltis</th>\n",
-       "      <th>xpp</th>\n",
+       "      <th>rect</th>\n",
+       "      <th>sich</th>\n",
+       "      <th>cik</th>\n",
+       "      <th>fyr</th>\n",
        "      <th>...</th>\n",
-       "      <th>gdwl</th>\n",
-       "      <th>lt</th>\n",
-       "      <th>xrd</th>\n",
-       "      <th>tstk</th>\n",
-       "      <th>fic</th>\n",
-       "      <th>lct</th>\n",
-       "      <th>che</th>\n",
-       "      <th>dpact</th>\n",
-       "      <th>seq</th>\n",
-       "      <th>xsga</th>\n",
+       "      <th>ceq</th>\n",
+       "      <th>dltt</th>\n",
+       "      <th>ppegt</th>\n",
+       "      <th>txdi</th>\n",
+       "      <th>dltis</th>\n",
+       "      <th>sstk</th>\n",
+       "      <th>drc</th>\n",
+       "      <th>rdip</th>\n",
+       "      <th>cusip</th>\n",
+       "      <th>txfo</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>permno</th>\n",
@@ -615,7 +631,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [datadate, dtdate, permco, liid, linkprim, gvkey, pstk, ni, dltis, xpp, dv, prcc_f, fyr, txditc, ap, sic, csho, rdip, drc, dvp, capx, wcap, xacc, pstkrv, dlc, oibdp, rect, dltr, txdi, re, pifo, ivao, ppegt, xrent, ib, oancf, fincf, drlt, act, ivst, cogs, naics, pstkl, tic, txp, emp, dd1, ajex, prstkc, dvc, itcb, mib, invt, sstk, cik, xad, dp, ivncf, sich, ppent, intan, txt, naicsh, xint, pi, cusip, fyear, aqc, exchg, at, ceq, sale, txdb, revt, dvpsx_f, txfo, dltt, sppe, gdwl, lt, xrd, tstk, fic, lct, che, dpact, seq, xsga]\n",
+       "Columns: [datadate, dtdate, permco, liid, linkprim, gvkey, rect, sich, cik, fyr, ajex, pifo, ivao, exchg, fyear, sppe, itcb, dvc, drlt, capx, xpp, tstk, ivst, xacc, gdwl, emp, dlc, oancf, txp, dd1, oibdp, ivncf, prcc_f, xrd, dvpsx_f, re, aqc, txditc, seq, ppent, xint, ib, mib, dpact, intan, fincf, dv, csho, che, dltr, ni, invt, tic, pi, act, lt, lct, xsga, revt, xrent, pstkrv, sale, txt, prstkc, dvp, at, txdb, sic, naicsh, fic, naics, pstk, wcap, cogs, pstkl, xad, ap, dp, ceq, dltt, ppegt, txdi, dltis, sstk, drc, rdip, cusip, txfo]\n",
        "Index: []\n",
        "\n",
        "[0 rows x 88 columns]"
@@ -644,13 +660,8 @@
     "    out = pd.DataFrame(index=df.index)\n",
     "\n",
     "    # industry \n",
-    "    out['sich_str'] = df['sich'].astype('Int64').astype('string').str.zfill(4)\n",
-    "    out['naicsh_str'] = df['naicsh'].astype('Int64').astype('string')\n",
-    "    out['sic_str'] = df['sic'].astype('string')\n",
-    "    out['naics_str'] = df['naics'].astype('string')\n",
-    "\n",
-    "    out['sic_full'] = out['sich_str'].fillna(out['sic_str'])\n",
-    "    out['naics_full'] = out['naicsh_str'].fillna(out['naics_str'])\n",
+    "    out['sic_full'] = df['sich'].astype('object').fillna(df['sic'].astype('object')).astype('category')\n",
+    "    out['naics_full'] = df['naicsh'].astype('object').fillna(df['naics'].astype('object')).astype('category')\n",
     "\n",
     "    # size \n",
     "    out['stock_price'] = np.abs(df['prcc_f'])\n",
@@ -744,16 +755,16 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th>sich_str</th>\n",
-       "      <th>naicsh_str</th>\n",
-       "      <th>sic_str</th>\n",
-       "      <th>naics_str</th>\n",
        "      <th>sic_full</th>\n",
        "      <th>naics_full</th>\n",
        "      <th>stock_price</th>\n",
        "      <th>lag_at</th>\n",
        "      <th>mktcap</th>\n",
        "      <th>pstk0</th>\n",
+       "      <th>pref_stock</th>\n",
+       "      <th>shreq</th>\n",
+       "      <th>bookeq</th>\n",
+       "      <th>bookeq_w_itcb</th>\n",
        "      <th>...</th>\n",
        "      <th>cflow_is</th>\n",
        "      <th>cflow_cfs</th>\n",
@@ -793,17 +804,58 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10026</th>\n",
+       "      <th>2021</th>\n",
+       "      <td>2050</td>\n",
+       "      <td>311812</td>\n",
+       "      <td>152.82</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2916.41688</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>845.654</td>\n",
+       "      <td>907.232</td>\n",
+       "      <td>907.232</td>\n",
+       "      <td>...</td>\n",
+       "      <td>104.998</td>\n",
+       "      <td>101.499</td>\n",
+       "      <td>101.499</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.259461</td>\n",
+       "      <td>0.053934</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>0 rows × 38 columns</p>\n",
+       "<p>1 rows × 34 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [sich_str, naicsh_str, sic_str, naics_str, sic_full, naics_full, stock_price, lag_at, mktcap, pstk0, pref_stock, shreq, bookeq, bookeq_w_itcb, tobinq, equityiss_tot, equityiss_cfs, debtiss_tot, debtiss_cfs, debtiss_bs, equityiss_tot_2la, equityiss_cfs_2la, debtiss_tot_2la, debtiss_cfs_2la, debtiss_bs_2la, ppent_pch, capx_2la, roa, cflow_is, cflow_cfs, cflow_full, cflow_is_2la, cflow_cfs_2la, cflow_full_2la, cash_2a, booklev, dividends_2la, repurchases_2la]\n",
-       "Index: []\n",
+       "             sic_full naics_full  stock_price  lag_at      mktcap  pstk0  \\\n",
+       "permno Adate                                                               \n",
+       "10026  2021      2050     311812       152.82     NaN  2916.41688    0.0   \n",
        "\n",
-       "[0 rows x 38 columns]"
+       "              pref_stock    shreq   bookeq  bookeq_w_itcb  ...  cflow_is  \\\n",
+       "permno Adate                                               ...             \n",
+       "10026  2021          0.0  845.654  907.232        907.232  ...   104.998   \n",
+       "\n",
+       "              cflow_cfs  cflow_full  cflow_is_2la  cflow_cfs_2la  \\\n",
+       "permno Adate                                                       \n",
+       "10026  2021     101.499     101.499           NaN            NaN   \n",
+       "\n",
+       "              cflow_full_2la   cash_2a   booklev  dividends_2la  \\\n",
+       "permno Adate                                                      \n",
+       "10026  2021              NaN  0.259461  0.053934            NaN   \n",
+       "\n",
+       "              repurchases_2la  \n",
+       "permno Adate                   \n",
+       "10026  2021               NaN  \n",
+       "\n",
+       "[1 rows x 34 columns]"
       ]
      },
      "execution_count": null,
@@ -813,7 +865,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "ftrs.head(0)"
+    "ftrs.head(1)"
    ]
   },
   {
