--- a/nbs/01_wrds/04_compq.ipynb
+++ b/nbs/01_wrds/04_compq.ipynb
@@ -316,8 +316,8 @@
        "      <th>fyearq</th>\n",
        "      <th>fqtr</th>\n",
        "      <th>rdq</th>\n",
-       "      <th>sic</th>\n",
        "      <th>indfmt</th>\n",
+       "      <th>sic</th>\n",
        "      <th>atq</th>\n",
        "      <th>sich</th>\n",
        "      <th>naicsh</th>\n",
@@ -331,8 +331,8 @@
        "      <td>1966.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>None</td>\n",
-       "      <td>3089</td>\n",
        "      <td>INDL</td>\n",
+       "      <td>3089</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -342,8 +342,8 @@
        "</div>"
       ],
       "text/plain": [
-       "    gvkey    datadate  fyearq  fqtr   rdq   sic indfmt   atq  sich naicsh\n",
-       "0  001000  1966-03-31  1966.0   1.0  None  3089   INDL  None  None   None"
+       "    gvkey    datadate  fyearq  fqtr   rdq indfmt   sic   atq  sich naicsh\n",
+       "0  001000  1966-03-31  1966.0   1.0  None   INDL  3089  None  None   None"
       ]
      },
      "execution_count": null,
@@ -409,27 +409,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>001000</td>\n",
-       "      <td>1966-03-31</td>\n",
-       "      <td>1966.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>12.0</td>\n",
+       "      <td>001345</td>\n",
+       "      <td>1962-04-30</td>\n",
+       "      <td>1961.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>INDL</td>\n",
        "      <td>C</td>\n",
        "      <td>D</td>\n",
        "      <td>STD</td>\n",
-       "      <td>AE.2</td>\n",
+       "      <td>3ALRM</td>\n",
        "      <td>...</td>\n",
-       "      <td>325.0</td>\n",
+       "      <td>440.0</td>\n",
        "      <td>978.0</td>\n",
        "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>GA</td>\n",
        "      <td>0.0</td>\n",
        "      <td>None</td>\n",
-       "      <td>1978-06-30</td>\n",
+       "      <td>1980-06-30</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -437,14 +437,14 @@
        "</div>"
       ],
       "text/plain": [
-       "    gvkey    datadate  fyearq  fqtr   fyr indfmt consol popsrc datafmt   tic  \\\n",
-       "0  001000  1966-03-31  1966.0   1.0  12.0   INDL      C      D     STD  AE.2   \n",
+       "    gvkey    datadate  fyearq  fqtr  fyr indfmt consol popsrc datafmt    tic  \\\n",
+       "0  001345  1962-04-30  1961.0   4.0  4.0   INDL      C      D     STD  3ALRM   \n",
        "\n",
        "   ... spcindcd spcseccd spcsrc state stko  weburl       dldte ipodate  sich  \\\n",
-       "0  ...    325.0    978.0   None  None  0.0    None  1978-06-30    None  None   \n",
+       "0  ...    440.0    978.0   None    GA  0.0    None  1980-06-30    None  None   \n",
        "\n",
        "  naicsh  \n",
-       "0   None  \n",
+       "0    NaN  \n",
        "\n",
        "[1 rows x 683 columns]"
       ]
@@ -456,8 +456,8 @@
    ],
    "source": [
     "#| eval: false\n",
-    "r = get_raw_data(vars='*', nrows=1)\n",
-    "r"
+    "r = get_raw_data(vars='*', nrows=1000)\n",
+    "r.head(1)"
    ]
   },
   {
@@ -501,20 +501,20 @@
        "      <th>fyearq</th>\n",
        "      <th>fqtr</th>\n",
        "      <th>rdq</th>\n",
-       "      <th>ibq</th>\n",
-       "      <th>niq</th>\n",
-       "      <th>invtq</th>\n",
-       "      <th>prccq</th>\n",
-       "      <th>scstkcy</th>\n",
-       "      <th>...</th>\n",
-       "      <th>atq</th>\n",
-       "      <th>txditcq</th>\n",
-       "      <th>dlttq</th>\n",
+       "      <th>naics</th>\n",
+       "      <th>sstky</th>\n",
        "      <th>seqq</th>\n",
-       "      <th>dvpq</th>\n",
+       "      <th>actq</th>\n",
+       "      <th>saleq</th>\n",
+       "      <th>...</th>\n",
+       "      <th>epsfxq</th>\n",
+       "      <th>fdateq</th>\n",
+       "      <th>cdvcy</th>\n",
        "      <th>wcapq</th>\n",
-       "      <th>xintq</th>\n",
-       "      <th>cheq</th>\n",
+       "      <th>oiadpq</th>\n",
+       "      <th>txdiq</th>\n",
+       "      <th>gdwlq</th>\n",
+       "      <th>req</th>\n",
        "      <th>sich</th>\n",
        "      <th>naicsh</th>\n",
        "    </tr>\n",
@@ -527,7 +527,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [gvkey, datadate, fyearq, fqtr, rdq, ibq, niq, invtq, prccq, scstkcy, xrdq, aqcy, lctq, gdwlq, dltisy, tstkq, epsfiq, intanq, piq, cogsq, npq, ajexq, req, pstkq, dltry, epsfxq, ppegtq, fopty, rectq, cshprq, cshoq, prstkcy, fyr, cik, ppentq, dlcq, opepsq, mibq, oiadpq, rectrq, apdedateq, dvy, oancfy, dpq, naics, txtq, fic, sppey, oibdpq, xsgaq, sstky, exchg, revtq, sic, pstkrq, epspiq, actq, epspxq, ivaoq, txdiq, fdateq, saleq, capxy, cdvcy, ceqq, cusip, ltq, atq, txditcq, dlttq, seqq, dvpq, wcapq, xintq, cheq, sich, naicsh]\n",
+       "Columns: [gvkey, datadate, fyearq, fqtr, rdq, naics, sstky, seqq, actq, saleq, atq, dltisy, oibdpq, exchg, xrdq, sppey, opepsq, prccq, tstkq, intanq, ivaoq, txditcq, npq, ibq, dlcq, dvy, mibq, dvpq, epspxq, scstkcy, invtq, cshprq, dltry, pstkq, ppegtq, sic, cik, pstkrq, lctq, rectq, prstkcy, xsgaq, aqcy, txtq, ltq, rectrq, capxy, dpq, revtq, cshoq, epspiq, dlttq, ppentq, ajexq, xintq, niq, epsfiq, apdedateq, cheq, oancfy, fopty, fic, cogsq, fyr, piq, cusip, ceqq, epsfxq, fdateq, cdvcy, wcapq, oiadpq, txdiq, gdwlq, req, sich, naicsh]\n",
        "Index: []\n",
        "\n",
        "[0 rows x 77 columns]"
@@ -560,6 +560,7 @@
     "    df = df.sort_values(['gvkey','datadate','fyearq','fqtr']).drop_duplicates(subset=['gvkey','datadate'], keep='last').copy()\n",
     "\n",
     "    # Clean up some useful dates (convert rdq to datetime, and extract the fiscal year end date)\n",
+    "    df = df.dropna(subset=['fyearq','fqtr']).copy()\n",
     "    df['rdq'] = pd.to_datetime(df['rdq'])\n",
     "    df['dtdate_fiscal'] = pd.to_datetime((df['fyearq'].astype(int).astype(str) + '-' \n",
     "                                          + (df['fqtr'].astype(int)*3).astype(str) \n",
@@ -567,6 +568,18 @@
     "                                          ) + pd.offsets.MonthEnd(1)\n",
     "    df['Qdate_fiscal'] = df['dtdate_fiscal'].dt.to_period('Q')\n",
     "\n",
+    "    # Change some variables to categorical\n",
+    "    for col in ['gvkey','naics','sic','fic','cik','tic','cusip']:\n",
+    "        if col in df.columns:\n",
+    "            df[col] = df[col].astype('string').astype('category')\n",
+    "\n",
+    "    if 'sich' in df.columns:\n",
+    "        df['sich'] = df['sich'].astype('Int64').astype('string').str.zfill(4).astype('category')\n",
+    "\n",
+    "    if 'naicsh' in df.columns:\n",
+    "        df['naicsh'] = df['naicsh'].astype('Int64').astype('string').astype('category')\n",
+    "\n",
+    "    # Set up panel structure\n",
     "    df = pdm.setup_panel(df, panel_ids=ENTITY_ID_IN_RAW_DSET, time_var=TIME_VAR_IN_RAW_DSET, freq=FREQ, \n",
     "                         panel_ids_toint=False,\n",
     "                         **clean_kwargs)\n",
@@ -624,18 +637,18 @@
        "      <th>fyearq</th>\n",
        "      <th>fqtr</th>\n",
        "      <th>rdq</th>\n",
-       "      <th>ibq</th>\n",
-       "      <th>niq</th>\n",
-       "      <th>invtq</th>\n",
-       "      <th>...</th>\n",
-       "      <th>atq</th>\n",
-       "      <th>txditcq</th>\n",
-       "      <th>dlttq</th>\n",
+       "      <th>naics</th>\n",
+       "      <th>sstky</th>\n",
        "      <th>seqq</th>\n",
-       "      <th>dvpq</th>\n",
+       "      <th>...</th>\n",
+       "      <th>epsfxq</th>\n",
+       "      <th>fdateq</th>\n",
+       "      <th>cdvcy</th>\n",
        "      <th>wcapq</th>\n",
-       "      <th>xintq</th>\n",
-       "      <th>cheq</th>\n",
+       "      <th>oiadpq</th>\n",
+       "      <th>txdiq</th>\n",
+       "      <th>gdwlq</th>\n",
+       "      <th>req</th>\n",
        "      <th>sich</th>\n",
        "      <th>naicsh</th>\n",
        "    </tr>\n",
@@ -676,20 +689,20 @@
        "      <td>2020.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>2021-03-23</td>\n",
-       "      <td>31.1</td>\n",
-       "      <td>28.1</td>\n",
-       "      <td>616.2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1642.8</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>266.8</td>\n",
+       "      <td>423860</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>932.4</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>2021-04-05</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>640.7</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>112.6</td>\n",
-       "      <td>5080.0</td>\n",
-       "      <td>423860.0</td>\n",
+       "      <td>19.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>685.3</td>\n",
+       "      <td>5080</td>\n",
+       "      <td>423860</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -701,13 +714,13 @@
        "gvkey  Qdate                                                                    \n",
        "001004 2021Q1  2021-02-28 2021-02-28    2020-09-30       2020Q3  2020.0   3.0   \n",
        "\n",
-       "                     rdq   ibq   niq  invtq  ...     atq  txditcq  dlttq  \\\n",
-       "gvkey  Qdate                                 ...                           \n",
-       "001004 2021Q1 2021-03-23  31.1  28.1  616.2  ...  1642.8      0.0  266.8   \n",
+       "                     rdq   naics  sstky   seqq  ...  epsfxq      fdateq  \\\n",
+       "gvkey  Qdate                                    ...                       \n",
+       "001004 2021Q1 2021-03-23  423860    NaN  932.4  ...    0.87  2021-04-05   \n",
        "\n",
-       "                seqq  dvpq  wcapq  xintq   cheq    sich    naicsh  \n",
-       "gvkey  Qdate                                                       \n",
-       "001004 2021Q1  932.4   0.0  640.7    1.1  112.6  5080.0  423860.0  \n",
+       "               cdvcy  wcapq  oiadpq  txdiq  gdwlq    req  sich  naicsh  \n",
+       "gvkey  Qdate                                                            \n",
+       "001004 2021Q1    NaN  640.7    19.5    NaN    NaN  685.3  5080  423860  \n",
        "\n",
        "[1 rows x 79 columns]"
       ]
@@ -841,13 +854,8 @@
     "    out = ytd_to_quarterly(df, suffix='_q')\n",
     "\n",
     "    # industry \n",
-    "    out['sich_str'] = df['sich'].astype('Int64').astype('string').str.zfill(4)\n",
-    "    out['naicsh_str'] = df['naicsh'].astype('Int64').astype('string')\n",
-    "    out['sic_str'] = df['sic'].astype('string')\n",
-    "    out['naics_str'] = df['naics'].astype('string')\n",
-    "\n",
-    "    out['sic_full'] = out['sich_str'].fillna(out['sic_str'])\n",
-    "    out['naics_full'] = out['naicsh_str'].fillna(out['naics_str'])\n",
+    "    out['sic_full'] = df['sich'].astype('object').fillna(df['sic'].astype('object')).astype('category')\n",
+    "    out['naics_full'] = df['naicsh'].astype('object').fillna(df['naics'].astype('object')).astype('category')\n",
     "\n",
     "    # size\n",
     "    out['stock_price'] = np.abs(df['prccq'])\n",
@@ -1014,7 +1022,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 48 columns</p>\n",
+       "<p>1 rows × 44 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1026,15 +1034,15 @@
        "gvkey  Qdate                                    ...                       \n",
        "001004 2021Q1    NaN      NaN     NaN      NaN  ...      40.0       NaN   \n",
        "\n",
-       "              cflow_full cflow_is_2la cflow_cfs_2la cflow_full_2la   cash_2a  \\\n",
-       "gvkey  Qdate                                                                   \n",
-       "001004 2021Q1        NaN          NaN           NaN            NaN  0.068542   \n",
+       "              cflow_full  cflow_is_2la  cflow_cfs_2la  cflow_full_2la  \\\n",
+       "gvkey  Qdate                                                            \n",
+       "001004 2021Q1        NaN           NaN            NaN             NaN   \n",
        "\n",
-       "               booklev  dividends_2la  repurchases_2la  \n",
-       "gvkey  Qdate                                            \n",
-       "001004 2021Q1      NaN            NaN              NaN  \n",
+       "                cash_2a  booklev  dividends_2la  repurchases_2la  \n",
+       "gvkey  Qdate                                                      \n",
+       "001004 2021Q1  0.068542      NaN            NaN              NaN  \n",
        "\n",
-       "[1 rows x 48 columns]"
+       "[1 rows x 44 columns]"
       ]
      },
      "execution_count": null,
