got rid of rolling stats in crspd.features because they create too many lags

--- a/nbs/01_wrds/02_crspd.ipynb
+++ b/nbs/01_wrds/02_crspd.ipynb
@@ -713,8 +713,9 @@
     "    out['ret_adj'] = delist_adj_ret(df, adj_ret_var='ret_adj')[['ret_adj']].copy()\n",
     "    \n",
     "    # Note that we are not using trading days below, but calendar days\n",
-    "    out['lbhret12'] = pdm.rrolling(1+df['ret'], window=30, func='prod', skipna=True) - 1\n",
-    "    out['retvol12'] = pdm.rrolling(df['ret'], window=30, func='std', skipna=True) \n",
+    "    #the rrolling method below is not feasible since it creates 30 lags all at once so it blows up the dataset\n",
+    "    #out['lbhret12'] = pdm.rrolling(1+df['ret'], window=30, func='prod', skipna=True) - 1\n",
+    "    #out['retvol12'] = pdm.rrolling(df['ret'], window=30, func='std', skipna=True) \n",
     "\n",
     "    return out "
    ]
